<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".activities.RegisterActivity">

    <TextView
        android:text="@string/new_account"
        android:textColor="?colorPrimaryVariant"
        android:textSize="22sp"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <EditText
        android:id="@+id/edt_username"
        android:hint="@string/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/edt_password"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_create"
        android:layout_gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/create" />

    <TextView
        android:text="@string/or"
        android:textColor="?colorPrimaryVariant"
        android:textSize="18sp"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/txt_account"
        android:text="@string/login"
        android:textSize="22sp"
        android:textAlignment="center"
        android:textColor="?colorPrimaryVariant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>