<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.UsersActivity">

    <com.toptoche.searchablespinnerlibrary.SearchableSpinner
        android:id="@+id/users_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"
        app:hintText="@string/izaberi_korisnika"
        android:contentDescription="@string/izaberi_korisnika"/>

    <EditText
        android:id="@+id/edt_username"
        android:hint="@string/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/edt_password"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <CheckBox
        android:id="@+id/cbx_admin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/admin"
        android:textColor="?colorPrimaryVariant" />

    <Button
        android:id="@+id/btn_delete"
        android:layout_gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/brisanje_korisnika" />

    <Button
        android:id="@+id/btn_save"
        android:layout_gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/sacuvaj_korisnika" />

</LinearLayout>