<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?colorPrimaryVariant"
        android:minHeight="?attr/actionBarSize"
        app:titleTextColor="@color/white"
        android:id="@+id/toolbar"/>

    <com.toptoche.searchablespinnerlibrary.SearchableSpinner
        android:id="@+id/artikli_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/btn_dropdown"
        app:hintText="@string/izaberi_artikal"
        android:spinnerMode="dropdown"
        android:contentDescription="@string/izaberi_artikal"/>

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:scaleType="fitCenter"
        android:contentDescription="@string/slika_artikla"/>

    <Button
        android:id="@+id/upload_image_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/upload"/>

</LinearLayout>